--- a/local/src_v6/components/base/forms/form_1/form/style.scss
+++ b/local/src_v6/components/base/forms/form_1/form/style.scss
@@ -66,6 +66,10 @@
       background-image: url(../img/tmp/input-auto.svg);
     }
 
+    &--bag {
+      background-image: url(../img/tmp/input-bag.svg);
+    }
+
     &--book {
       background-image: url(../img/tmp/input-book.svg);
     }
@@ -96,6 +100,10 @@
 
     &--post {
       background-image: url(../img/tmp/input-post.svg);
+    }
+
+    &--star {
+      background-image: url(../img/tmp/input-star.svg);
     }
 
     &--tel {
