--- a/local/src_v6/components/pages/cooperation/content/index.pug
+++ b/local/src_v6/components/pages/cooperation/content/index.pug
@@ -12,6 +12,7 @@ include ../../../../components/block/b-section/index
   .row.justify-content-center
     .col-xl-8.col-lg-11.col-12
       p Хотите стать нашим партнером? Получите индивидуальное предложение и начинайте работать с нами уже сейчас!
+      include ../cooperation-form/index
       p
         | Наша группа компаний является импортером и официальным представителем в Беларуси нескольких брендов профессиональной косметики и  электротоваров.
         br
