--- a/local/src_v6/components/base/forms/form_1/form_row/style.scss
+++ b/local/src_v6/components/base/forms/form_1/form_row/style.scss
@@ -1,6 +1,10 @@
 .form-group {
   @include make-row();
-  margin-bottom: 1.7rem;
+  margin-bottom: 20px;
+
+  @media (max-width: $screen-sm-max) {
+    margin-bottom: 10px;
+  }
 
   .btn_submit {
     flex-shrink: 0;
@@ -59,6 +63,7 @@
   }
 
   .controls {
+    display: none;
     font-size: $input-font-size;
 
     > label {
