--- a/local/src_v6/components/pages/auth/content/index.pug
+++ b/local/src_v6/components/pages/auth/content/index.pug
@@ -1,4 +1,4 @@
-.content-wrap
+.content-wrap.lk-content-wrap
   .row.justify-content-center
     .col-xl-8.col-lg-11.col-12
       .tabs-string.tabs
