--- a/local/src_v6/components/base/forms/form_1/checkboxradio/style.scss
+++ b/local/src_v6/components/base/forms/form_1/checkboxradio/style.scss
@@ -42,11 +42,20 @@
     &:not(.ui-checkboxradio-radio-label) {
       font-size: 16px;
 
+      .lk & {
+        font-size: 14px;
+        line-height: 1.29;
+      }
+
       .ui-checkboxradio-icon {
         width: 15px;
         height: 15px;
         margin: 5px 10px 0 0;
         border: 1px solid #C3C3C3;
+
+        .lk & {
+          margin-top: 3px;
+        }
       }
 
       // checked
@@ -59,6 +68,23 @@
           &:before {
             @include svg();
             @include svg-checkboxradio-arrow();
+
+            .lk & {
+              width: auto;
+              height: auto;
+              background-image: none;
+              background-color: $brand-black;
+              top: 3px;
+              bottom: 3px;
+              left: 3px;
+              right: 3px;
+              transform: none;
+            }
+          }
+
+          .lk & {
+            border-color: $brand-black;
+            background-color: $brand-white;
           }
         }
 
