--- a/local/src_v6/components/pages/auth/form-auth/index.pug
+++ b/local/src_v6/components/pages/auth/form-auth/index.pug
@@ -1,5 +1,6 @@
 include ../../../base/forms/form_1/form/index
-.form-auth
+
+.form-auth.lk-form
   .form-auth__inner
     form#form-auth.form-1(name='form_auth', method='post', target='_top', action='/')
       fieldset.fieldset
@@ -18,11 +19,23 @@ include ../../../base/forms/form_1/form/index
                 .input-wrap
                   input#form_auth_PASS.form-control.input-with-icon.input-with-icon--pass(type='password', name='form_auth_PASS', placeholder='Пароль', value='', required='')
               .controls.col-12
-          .col-12
+          .col-md-5.col-12
             // row
             .form-group.mb-0
               .col-12.btn-wrap
-                +btn-primary({type: 'button', className: 'btn_submit', text: 'войти в аккаунт'})(id='form-auth-submit')
+                +btn-primary({
+                    type: 'button',
+                    className: 'btn_submit with-icon icon-right toAccount',
+                    text: '<span>войти в аккаунт</span><span class="icon"></span>'
+                })(id='form-auth-submit')
+          .col-md-7.col-12.info-wrap
+            .form-info
+              .form-info__item
+                | Забыли свой пароль?&ensp;
+                a(href='#') Восстановите
+              .form-info__item
+                | Проблемы со входом в Ваш кабинет?&ensp;
+                a(href='#') Напишите нам
     script.
         !function () {
             'use strict';
