--- a/local/src_v6/components/footer/menu-foot-2/index.pug
+++ b/local/src_v6/components/footer/menu-foot-2/index.pug
@@ -26,7 +26,7 @@
                 span Инструменты и аксессуары для парикмахера
     ul.menu_level_1.break-word.list-reset.d-none.d-md-block
       li.item_1
-        a(href='#').d-none.d-md-block
+        .d-none.d-md-inline-block
           span <br>
         .submenu
           ul.menu_level_2.list-reset
