--- a/local/src_v6/components/base/pagination/index.pug
+++ b/local/src_v6/components/base/pagination/index.pug
@@ -3,6 +3,9 @@ nav.pagination-wrap
     li.page-item.disabled
       span.page-link.prev
         span пред
+    li.page-item
+      a.page-link(href='#')
+        span 1
     li.page-item.active
       a.page-link(href='#')
         span 2
