--- a/local/templates/.default/etalon.html
+++ b/local/templates/.default/etalon.html
@@ -1115,6 +1115,7 @@
 								<nav class="pagination-wrap">
 									<ul class="pagination list-reset">
 										<li class="page-item disabled"><span class="page-link prev"><span>пред</span></span></li>
+										<li class="page-item"><a class="page-link" href="#"><span>1</span></a></li>
 										<li class="page-item active"><a class="page-link" href="#"><span>2</span></a></li>
 										<li class="page-item"><a class="page-link" href="#"><span>3</span></a></li>
 										<li class="page-item"><a class="page-link" href="#"><span>4</span></a></li>
