--- a/local/src_v6/components/base/forms/form_1/form/style.scss
+++ b/local/src_v6/components/base/forms/form_1/form/style.scss
@@ -5,7 +5,7 @@
   @include font-family-light();
   font-size: $input-font-size;
   line-height: $input-line-height;
-  color: $input-color;
+  color: $brand-gray-12;
   background-color: $input-bg;
   background-clip: padding-box;
   border: 1px solid $input-border-color;
