--- a/local/templates/.default/cooperation.html
+++ b/local/templates/.default/cooperation.html
@@ -993,7 +993,7 @@
 																<!-- row-->
 																<div class="form-group mb-0">
 																	<div class="col-12 btn-wrap">
-																																		<button class="btn btn-primary btn_submit" id="form-cooperation-submit" type="button">отправить</button>
+																																		<button class="btn btn-primary btn_submit" id="form-cooperation-submit" type="button"><span class="d-none d-md-block">отправить предложение</span><span class="d-block d-md-none">отправить</span></button>
 																	</div>
 																</div>
 															</div>
@@ -1106,7 +1106,7 @@
 																								<div class="cooperation-menu">
 																									<div class="cooperation-menu__inner">
 																										<div class="cooperation-menu__img-wrap">
-																											<div class="cooperation-menu__img-inner"><img class="cooperation-menu__img" src="img/tmp/cm-01.svg" alt="рассходные материалы"></div>
+																											<div class="cooperation-menu__img-inner"><img class="cooperation-menu__img" src="img/tmp/cm-04.svg" alt="рассходные материалы"></div>
 																										</div>
 																										<div class="cooperation-menu__descr">
 																											<div class="cooperation-menu__title">рассходные материалы</div>
@@ -1120,7 +1120,7 @@
 																								<div class="cooperation-menu">
 																									<div class="cooperation-menu__inner">
 																										<div class="cooperation-menu__img-wrap">
-																											<div class="cooperation-menu__img-inner"><img class="cooperation-menu__img" src="img/tmp/cm-01.svg" alt="электротовары"></div>
+																											<div class="cooperation-menu__img-inner"><img class="cooperation-menu__img" src="img/tmp/cm-5.svg" alt="электротовары"></div>
 																										</div>
 																										<div class="cooperation-menu__descr">
 																											<div class="cooperation-menu__title">электротовары</div>
@@ -1190,7 +1190,7 @@
 																																				<div class="cooperation-menu">
 																																					<div class="cooperation-menu__inner">
 																																						<div class="cooperation-menu__img-wrap">
-																																							<div class="cooperation-menu__img-inner"><img class="cooperation-menu__img" src="img/tmp/cm-01.svg" alt="рассходные материалы"></div>
+																																							<div class="cooperation-menu__img-inner"><img class="cooperation-menu__img" src="img/tmp/cm-04.svg" alt="рассходные материалы"></div>
 																																						</div>
 																																						<div class="cooperation-menu__descr">
 																																							<div class="cooperation-menu__title">рассходные материалы</div>
@@ -1206,7 +1206,7 @@
 																																				<div class="cooperation-menu">
 																																					<div class="cooperation-menu__inner">
 																																						<div class="cooperation-menu__img-wrap">
-																																							<div class="cooperation-menu__img-inner"><img class="cooperation-menu__img" src="img/tmp/cm-01.svg" alt="электротовары"></div>
+																																							<div class="cooperation-menu__img-inner"><img class="cooperation-menu__img" src="img/tmp/cm-5.svg" alt="электротовары"></div>
 																																						</div>
 																																						<div class="cooperation-menu__descr">
 																																							<div class="cooperation-menu__title">электротовары</div>
