--- a/local/src_v6/components/pages/cooperation/cooperation-form/index.pug
+++ b/local/src_v6/components/pages/cooperation/cooperation-form/index.pug
@@ -56,7 +56,7 @@ include ../../../base/forms/form_1/form/index
             // row
             .form-group.mb-0
               .col-12.btn-wrap
-                +btn-primary({type: 'button', className: 'btn_submit', text: 'отправить'})(id='form-cooperation-submit')
+                +btn-primary({type: 'button', className: 'btn_submit', text: '<span class="d-none d-md-block">отправить предложение</span><span class="d-block d-md-none">отправить</span>'})(id='form-cooperation-submit')
     script.
         !function () {
             'use strict';
