--- a/local/templates/.default/card-2.html
+++ b/local/templates/.default/card-2.html
@@ -956,7 +956,7 @@
 										</div>
 										<div class="prod__cost">107.10 BYN</div>
 										<div class="prod__row prod__row--buy row">
-											<div class="prod__col prod__col--buy">
+											<div class="prod__col prod__col--buy prod__col--no-margin-right">
 												<div class="quantity js-quantity">
 													<button class="quantity__btn quantity__btn--minus js-quantity-btn js-quantity-btn-minus"></button>
 													<input class="quantity__input js-quantity-input" type="number" value="1" min="1">
@@ -976,8 +976,8 @@
 																	<div class="accordion" id="accordion-30">
 																		<div class="acc-group">
 																			<div class="panel">
-																				<div class="acc-heading"><a class="link svg-arrow collapsed" href="#" data-toggle="collapse" data-target="#accordion-0"><span>Описание</span></a></div>
-																				<div class="collapse" id="accordion-0" data-parent="#accordion-30">
+																				<div class="acc-heading"><a class="link svg-arrow" href="#" data-toggle="collapse" data-target="#accordion-0"><span>Описание</span></a></div>
+																				<div class="collapse show" id="accordion-0" data-parent="#accordion-30">
 																					<div class="acc-body">Каучуковый гель-лак Irisk Nude Strong избавит вас от необходимости применять специальную каучуковую базу под гель-лак. Его густота, плотность и эластичность позволит вам легко, быстро и безопасно отрастить длину,а также укрепить тонкие и ломкие ногти. Френч-маникюр с новинкой займет существенно меньше времени, ведь покрытие сохнет в лампе всего 30-40 секунд!</div>
 																				</div>
 																			</div>
