--- a/local/templates/.default/card.html
+++ b/local/templates/.default/card.html
@@ -948,7 +948,7 @@
 											</div>
 										</div>
 										<h1 class="prod__title small">Alfaparf Milano SDL Diamond Normal Hair <br>Кондиционер придающий блеск для нормальных волос</h1>
-										<div class="prod-tabs tabs-string tabs mb-0">
+										<div class="prod-tabs tabs-border tabs mb-0">
 											<ul class="nav nav-tabs list-reset" role="tablist">
 												<li class="nav-item"><a class="nav-link active" href="#tab-1" data-toggle="tab"><span>100 мл</span></a></li>
 												<li class="nav-item"><a class="nav-link" href="#tab-2" data-toggle="tab"><span>50 мл</span></a></li>
@@ -957,7 +957,7 @@
 												<div class="tab-pane fade in active show" id="tab-1" role="tabpanel">
 													<div class="prod__cost">107.10 BYN</div>
 													<div class="prod__row prod__row--buy row">
-														<div class="prod__col prod__col--buy">
+														<div class="prod__col prod__col--buy prod__col--no-margin-right">
 															<div class="quantity js-quantity">
 																<button class="quantity__btn quantity__btn--minus js-quantity-btn js-quantity-btn-minus"></button>
 																<input class="quantity__input js-quantity-input" type="number" value="1" min="1">
@@ -977,8 +977,8 @@
 																				<div class="accordion" id="accordion-30">
 																					<div class="acc-group">
 																						<div class="panel">
-																							<div class="acc-heading"><a class="link svg-arrow collapsed" href="#" data-toggle="collapse" data-target="#accordion-0"><span>Описание</span></a></div>
-																							<div class="collapse" id="accordion-0" data-parent="#accordion-30">
+																							<div class="acc-heading"><a class="link svg-arrow" href="#" data-toggle="collapse" data-target="#accordion-0"><span>Описание</span></a></div>
+																							<div class="collapse show" id="accordion-0" data-parent="#accordion-30">
 																								<div class="acc-body">Кондиционер превосходно кондиционирует и распутывает волосы. Придает ослепительный блеск без утяжеления. Идеально сбалансированная формула и оригинальная концентрация активных ингредиентов в составе обеспечивают волосы правильным количеством элементов, необходимых для того, чтобы день за днем ваши волосы выглядели превосходно! Входящий в состав мультивитаминный комплекс наполняет волосы жизненной силой. Содержит ненасыщенные жирные кислоты Омега-3 и Омега-6. Не содержит сульфатов, парабенов, парафиновых и минеральных масел. Активные ингредиенты: мультивитаминный комплекс, Омега-3, Омега-6. Способ применения: после использования шампуня Illuminating Low Shampoo нанести кондиционер на влажные волосы, равномерно распределив по всей длине. Оставить на одну-две минуты. Тщательно смыть водой.</div>
 																							</div>
 																						</div>
@@ -1020,8 +1020,8 @@
 																				<div class="accordion" id="accordion-30">
 																					<div class="acc-group">
 																						<div class="panel">
-																							<div class="acc-heading"><a class="link svg-arrow collapsed" href="#" data-toggle="collapse" data-target="#accordion-0"><span>Описание</span></a></div>
-																							<div class="collapse" id="accordion-0" data-parent="#accordion-30">
+																							<div class="acc-heading"><a class="link svg-arrow" href="#" data-toggle="collapse" data-target="#accordion-0"><span>Описание</span></a></div>
+																							<div class="collapse show" id="accordion-0" data-parent="#accordion-30">
 																								<div class="acc-body">Кондиционер превосходно кондиционирует и распутывает волосы. Придает ослепительный блеск без утяжеления. Идеально сбалансированная формула и оригинальная концентрация активных ингредиентов в составе обеспечивают волосы правильным количеством элементов, необходимых для того, чтобы день за днем ваши волосы выглядели превосходно! Входящий в состав мультивитаминный комплекс наполняет волосы жизненной силой. Содержит ненасыщенные жирные кислоты Омега-3 и Омега-6. Не содержит сульфатов, парабенов, парафиновых и минеральных масел. Активные ингредиенты: мультивитаминный комплекс, Омега-3, Омега-6. Способ применения: после использования шампуня Illuminating Low Shampoo нанести кондиционер на влажные волосы, равномерно распределив по всей длине. Оставить на одну-две минуты. Тщательно смыть водой.</div>
 																							</div>
 																						</div>
