--- a/local/src_v6/components/pages/card-2/prod/index.pug
+++ b/local/src_v6/components/pages/card-2/prod/index.pug
@@ -22,7 +22,7 @@ include ../../../../components/base/accordion/index
           option(value='1') Красный
       .prod__cost 107.10 BYN
       .prod__row.prod__row--buy.row
-        .prod__col.prod__col--buy
+        .prod__col.prod__col--buy.prod__col--no-margin-right
           include ../../../block/quantity/index
         .prod__col.prod__col--buy
           +btn-primary({type: 'button', text: '<span class="d-none d-lg-block">быстрая покупка</span><span class="d-block d-lg-none">Купить</span>'})(data-toggle='modal', data-target='#fastBuyModal')
