--- a/local/templates/.default/etalon.html
+++ b/local/templates/.default/etalon.html
@@ -1966,8 +1966,8 @@
 																<div class="accordion" id="accordion-30">
 																	<div class="acc-group">
 																		<div class="panel">
-																			<div class="acc-heading"><a class="link svg-arrow collapsed" href="#" data-toggle="collapse" data-target="#accordion-0"><span>Могу ли я сделать валютный перевод в валюте отличной от доллара и евро?</span></a></div>
-																			<div class="collapse" id="accordion-0" data-parent="#accordion-30">
+																			<div class="acc-heading"><a class="link svg-arrow" href="#" data-toggle="collapse" data-target="#accordion-0"><span>Могу ли я сделать валютный перевод в валюте отличной от доллара и евро?</span></a></div>
+																			<div class="collapse show" id="accordion-0" data-parent="#accordion-30">
 																				<div class="acc-body">Добрый день! Поездку в Турцию можно начинать планировать в конце января — начале февраля, когда появляются цены на отели по акции раннего бронирования. Главное, что Вы должны помнить при бронирования тура по акции, в дальнейшем Вам нельзя будет переиграть даты, количество людей или отель. Так что нужно точно знать сроки поездки, быть уверенным, что все участники смогут поехать и тщательно выбрать отель. В этом Вам могут помочь наши менеджеры.</div>
 																			</div>
 																		</div>
